# secure-backups-drill-lab

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
ai_providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
examples/policies/: simple-borg-server.yaml  simple-restic-home.yaml  zfs-send-offsite.yaml
scripts/: lint.sh  security_scan.sh
src/backup_disaster_drill_lab/: __init__.py  metrics.py
src/backup_disaster_drill_lab/report/: __init__.py  model.py
src/backup_disaster_drill_lab/scenarios/: __init__.py
src/backup_orchestrator_observability/: __init__.py  cli.py  config.py  jobs.py  retention.py
src/backup_orchestrator_observability/ai/: __init__.py
src/backup_orchestrator_observability/backends/: __init__.py  base.py  borg_backend.py  restic_backend.py  zfs_backend.py
tests/: conftest.py
tests/unit/: test_config_loader.py  test_jobs_model.py  test_rto_rpo_metrics.py
