[tool.poetry]
name = "secure-backups-drill-lab"
version = "0.1.0"
description = "Secure backup orchestration with observability and disaster recovery drill lab"
authors = ["Ranas Mukminov <https://run-as-daemon.ru>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://run-as-daemon.ru"
repository = "https://github.com/ranas-mukminov/secure-backups-drill-lab"
keywords = ["backup", "restic", "borg", "zfs", "prometheus", "grafana", "disaster-recovery", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Monitoring",
]
packages = [{include = "backup_orchestrator_observability", from = "src"}, {include = "backup_disaster_drill_lab", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
apscheduler = "^3.10.4"
click = "^8.1.7"
prometheus-client = "^0.19.0"
jinja2 = "^3.1.2"
python-dateutil = "^2.8.2"
rich = "^13.7.0"
httpx = "^0.25.2"
psutil = "^5.9.6"

# Optional AI dependencies
openai = {version = "^1.6.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.8"
mypy = "^1.7.1"
black = "^23.12.0"
bandit = "^1.7.5"
safety = "^2.3.5"
freezegun = "^1.4.0"
responses = "^0.24.1"
types-pyyaml = "^6.0.12"
types-python-dateutil = "^2.8.19"

[tool.poetry.extras]
ai = ["openai"]

[tool.poetry.scripts]
backup-orchestrator = "backup_orchestrator_observability.cli:main"
drill-runner = "backup_disaster_drill_lab.runner:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/**/*.py" = ["ARG001", "ARG002"]  # unused function arguments in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # assert_used (needed in tests)
